modifiche per rendere compliant a sonarcloud